feat: add user contoller unit tests
